# langchain-course-campusx

./: .gitignore  01_chat_model.py  02_embeddings_model_local.py  03_embeddings_model_inference_api.py  04_document_similarity_score.py  05_prompts_ui.py  06_dynamic_prompts.py  07_prompt_template_generator.py  08_simple_chatbot.py  11_chat_prompt_template.py  13_typed_dictionary.py  15_using_ollama_model.py  16_pydantic.py  17_structured_output_pydantic.py  18_simple_output.py  README.md  chat_history.txt  file.csv  file.txt  main.ipynb  main.py  prompt_template.json  pyproject.toml
01-Fundamentals/05_messages/: 12_message_place_holder.py
01-Fundamentals/06-output-parsers/: 19_str_output_parser.py
01-Fundamentals/06_output_parsers/: 20_json_output_parser.py
01-Fundamentals/07-chains/: 24_parallel_chains.py
01-Fundamentals/07_chains/: 22_simple_chain.py
01-Fundamentals/08_Runnables/: 31_runnables_branch_lcel.py  32_runnables_parallel_lcel.py
01_models_define/: 01_chat_model.py
02-RAG/09_documents_loader/: 35_directory_loader.py
02-RAG/10-text-splitters/: 40_length_based_doc_loader.py  41_text_structure_based.py
05_messages/: 09_messages.py  10_chatbot_with_messages.py
06_output_parsers/: 21_pydantic_output_parser.py
08_Runnables/: 26_runnables_sequence.py  27_runnables_parallel.py
09_documents_loader/: 36_web_based_loader.py  38_csv_loader.py
10_text_splitters/: 39_length_based.py  43_semantic_text_splitters.py
11_vector_stores/: 44_chroma.ipynb  44_chroma.py
12_retrievers/: 47_mmr.py  48_multiquery_retriever.py  49_contextual_compression_retriever.py
13_rag_system/: embeddings_vector_store_52.py  final_chain_56.py  main.ipynb  prompt_54.py  prompt_context_54.py  retriever_53.py  text_splitter_51.py  youtube_transcript_loader_50.py
6_output_parsers/: 14_structured_output_typed_dict.py  17_structured_output_pydantic.py
7_chains/: 23_sequential_chains.py  25_conditional_chains.py
8_Runnables/: 28_runnables_passthrough.py  29_runnables_lambda.py  30_runnables_branch.py
9_RAG/: 33_text_file_loader.py  34_pdf_loader.py
9_documents_loader/: 37_blog_question_answer.py
(+25 files in other folders)
