[project]
name = "langchain-course-campusx"
version = "0.1.0"
description = "Practice files of langchain course by campusx on youtube."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "huggingface-hub>=0.36.1",
 "langchain>=1.2.8",
 "langchain-core>=1.2.9",
 "langchain-huggingface>=1.2.0",
 "langchain-ollama>=1.0.1",
 "pydantic[email]>=2.12.5",
 "python-dotenv>=1.2.1",
 "scikit-learn>=1.8.0",
 "sentence-transformers>=5.2.2",
 "streamlit>=1.54.0",
]
